# daedra

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  compose.yml  rustfmt.toml
.github/workflows/: ci.yml  publish.yml
benches/: search_benchmark.rs
docs/: config.toml
docs/content/: _index.md
docs/public/: index.html  robots.txt  sitemap.xml
docs/templates/: index.html
examples/: basic_usage.rs  caching.rs  mcp_server.rs
src/: cache.rs  lib.rs  main.rs  server.rs  types.rs  url_classification.rs
src/tools/: backend.rs  bing.rs  crawl.rs  ddg_instant.rs  fetch.rs  github.rs  mod.rs  search.rs  serper.rs  stackexchange.rs  tavily.rs  wiby.rs  wikipedia.rs
tests/: integration_tests.rs  issue_regressions.rs  stdio_transport_tests.rs
tests/fixtures/: celiachia.html
