[package]
name = "daedra"
version = "0.1.0"
edition = "2021"
authors = ["DIRMACS Global Services <build@dirmacs.com>"]
description = "A high-performance web search and research MCP server written in Rust"
license = "MIT"
repository = "https://github.com/dirmacs/daedra"
homepage = "https://github.com/dirmacs/daedra"
documentation = "https://docs.rs/daedra"
readme = "README.md"
keywords = ["mcp", "duckduckgo", "search", "ai", "model-context-protocol"]
categories = ["command-line-utilities", "web-programming", "development-tools"]
rust-version = "1.75"

[lib]
name = "daedra"
path = "src/lib.rs"

[[bin]]
name = "daedra"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "rt-multi-thread", "macros", "sync", "time", "signal"] }

# HTTP client for web fetching
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "rustls-tls"], default-features = false }

# HTML parsing and content extraction
scraper = "0.20"
html5ever = "0.27"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env", "color"] }
colored = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Caching
moka = { version = "0.12", features = ["future"] }

# Concurrency
rayon = "1.10"
futures = "0.3"
async-trait = "0.1"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Regex for content processing
regex = "1.10"
lazy_static = "1.5"

# UUID for request IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Markdown conversion
html2md = "0.2"

# HTTP server for SSE transport
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Rate limiting
governor = "0.6"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "search_benchmark"
harness = false

[features]
default = ["stdio", "sse"]
stdio = []
sse = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
